# mgl77

./: README.md  example_game.toml  pyproject.toml
assets/games/test/: game.toml
assets/games/test_2/: game.toml
assets/games/test_3/: game.toml
src/mgl77/: back_loop.py  fetch.py  game_data.py  main.py  time_keeper.py
