[project]
name = "mgl77"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nahco314", email = "nahco3_ta@yahoo.co.jp" }
]
dependencies = [
    "flet>=0.22.0",
    "pydantic>=2.7.1",
    "dulwich>=0.22.1",
    "py-timeout>=0.0.1",
    "func-timeout>=4.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mgl77"]
